# airlock

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  entrypoint.sh  pyproject.toml  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
agents/: __init__.py  rogue_a2a_server.py
agents/warden/: __init__.py  policy.py  tools.py  warden.py
config/: agent_config.example.yaml
design/: landing.html
docs/: ANALYTICS.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  PRD.md  TASKS.md
fixtures/: accounts.json  customers.json  scenario.json
ledger/: package-lock.json  package.json  proxy.ts
ledger/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
ledger/app/(dashboard)/: error.tsx  layout.tsx
ledger/app/(dashboard)/agents/: page.tsx
ledger/app/(dashboard)/dashboard/: page.tsx
ledger/app/(dashboard)/ledger/: page.tsx
ledger/app/(dashboard)/policy/: page.tsx
ledger/app/components/: CTABlock.tsx  DiffPanel.tsx  EmptyState.tsx  ErrorBanner.tsx  FadeUp.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  PageAnimations.tsx  PolicyBlock.tsx  SmoothScroll.tsx  ThreatModel.tsx
ledger/app/demo/: page.tsx
ledger/app/login/: page.tsx
ledger/app/observe/: page.tsx
ledger/types/: locomotive-scroll.d.ts
policies/: policy.yaml
scripts/: __init__.py  _band.py  _probe.py  _test_llm.py  read_room.py  screenshot.mjs  seed_room.py  send_request.py
tests/: test_policy.py  test_tools.py
(+7 files in other folders)
